force-app/main/default/objects/sugati__Invoice_Line_Item__c/sugati__Invoice_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Invoice Line Item</label>
    <nameField>
        <displayFormat>ILI-{00000}</displayFormat>
        <label>Invoice Line Item #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>