force-app/main/default/objects/sugati__Invoice_Line_Item__c/fields/sugati__ILI_Client_Invoice__c.field-meta.xml
<CustomField>
    <fullName>sugati__ILI_Client_Invoice__c</fullName>
    <label>Client Invoice</label>
    <referenceTo>sugati__Client_Invoice__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>