force-app/main/default/objects/sugati__Invoice_Line_Item__c/fields/sugati__ILI_Overwrite_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>sugati__ILI_Overwrite_Exchange_Rate__c</fullName>
    <label>Overwrite Exchange Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>