force-app/main/default/objects/sugati__Invoice_Line_Item__c/fields/sugati__ILI_Total_Supplier_Cost__c.field-meta.xml
<CustomField>
    <fullName>sugati__ILI_Total_Supplier_Cost__c</fullName>
    <label>Total Supplier Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>